# spoticord

./: .dockerignore  .gitignore  CHANGELOG.md  COMPILING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.metrics  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-push.yml  cargo-clippy.yml
spoticord_audio/: Cargo.toml
spoticord_audio/src/: lib.rs  sink.rs  stream.rs
spoticord_config/: Cargo.toml  README.md
spoticord_config/src/: env.rs  lib.rs
spoticord_database/: Cargo.toml
spoticord_database/migrations/2024-06-17-090114_initial_setup/: down.sql  up.sql
spoticord_database/src/: error.rs  lib.rs  migrations.rs  models.rs  schema.rs
spoticord_player/: Cargo.toml
spoticord_player/src/: info.rs  lib.rs
spoticord_session/: Cargo.toml
spoticord_session/src/: error.rs  lib.rs  lyrics_embed.rs  manager.rs  playback_embed.rs
spoticord_stats/: Cargo.toml
spoticord_stats/src/: lib.rs
spoticord_utils/: Cargo.toml
spoticord_utils/src/: discord.rs  lib.rs  spotify.rs
src/: bot.rs  consts.rs  database.rs  main.rs  metrics.rs  player.rs  stats.rs
src/audio/: backend.rs  mod.rs  stream.rs
src/bot/: events.rs  mod.rs
src/bot/commands/: mod.rs  ping.rs  token.rs
src/bot/commands/core/: help.rs  link.rs  mod.rs  rename.rs  unlink.rs  version.rs
src/bot/commands/music/: join.rs  leave.rs  mod.rs  playing.rs  stop.rs
src/commands/: mod.rs
src/commands/core/: help.md  help.rs  link.rs  mod.rs  rename.rs  unlink.rs  version.rs
src/commands/debug/: mod.rs  ping.rs  token.rs
src/commands/music/: disconnect.rs  join.rs  lyrics.rs  mod.rs  playing.rs  stop.rs
src/ipc/: mod.rs  packet.rs
src/librespot_ext/: discovery.rs  mod.rs
src/player/: mod.rs  stream.rs
src/session/: manager.rs  mod.rs  pbi.rs
src/stats/: mod.rs
src/utils/: consts.rs  discord.rs  embed.rs  mod.rs  spotify.rs
