[package]
name = "spoticord"
version = "2.2.0"
edition = "2021"
rust-version = "1.67.0"

[[bin]]
name = "spoticord"
path = "src/main.rs"

[workspace]

[features]
stats = ["redis"]

[dependencies.spoticord_audio]
path = "./spoticord_audio"

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
env_logger = "0.10.1"
hex = "0.4.3"
lazy_static = "1.4.0"
librespot = { version = "0.4.2", default-features = false }
log = "0.4.20"
poise = "0.5.7"
protobuf = "2.28.0"
redis = { version = "0.23.3", optional = true, default-features = false }
reqwest = { version = "0.11.22", default-features = false }
samplerate = "0.2.4"
serde = "1.0.192"
serde_json = "1.0.108"
songbird = { version = "0.3.2", features = ["driver", "serenity-rustls"], default-features = false }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt", "full"] }
zerocopy = "0.7.26"

[profile.release]
opt-level = 3
lto = true
