[package]
name = "spoticord"
version = "2.2.0"
edition = "2021"
rust-version = "1.75.0"

[[bin]]
name = "spoticord"
path = "src/main.rs"

[workspace]
members = [
    "spoticord_audio",
    "spoticord_config",
    "spoticord_database",
    "spoticord_player",
    "spoticord_session",
    "spoticord_utils",
    "spoticord_stats",
]

[features]
default = ["stats"]
stats = ["spoticord_stats"]

[dependencies]
spoticord_config = { path = "./spoticord_config" }
spoticord_database = { path = "./spoticord_database" }
spoticord_player = { path = "./spoticord_player" }
spoticord_session = { path = "./spoticord_session" }
spoticord_utils = { path = "./spoticord_utils" }
spoticord_stats = { path = "./spoticord_stats", optional = true }

anyhow = "1.0.86"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"
serenity = "0.12.2"
songbird = { version = "0.4.3", features = ["simd-json"] }
tokio = { version = "1.39.2", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
