[package]
name = "spoticord_audio"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { version = "0.4.2", default-features = false }
samplerate = "0.2.4"
songbird = "0.3.2"
tokio = { version = "1.34.0", features = ["sync"], default-features = false }
zerocopy = "0.7.26"
