[package]
name = "spoticord_audio"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { git = "https://github.com/SpoticordMusic/librespot.git", default-features = false }
songbird = { version = "0.4.4", features = ["simd-json"] }
tokio = { version = "1.41.1", features = ["sync"], default-features = false }
zerocopy = "0.8.9"
