[package]
name = "spoticord_database"
version.workspace = true
edition = "2021"

[dependencies]
spoticord_config = { path = "../spoticord_config" }

diesel = { version = "2.2.4", features = ["chrono"] }
diesel-async = { version = "0.5.1", features = ["deadpool", "postgres"] }
rspotify = { version = "0.13.3", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
chrono = "0.4.38"
thiserror = "2.0.3"
rand = "0.8.5"
diesel_async_migrations = "0.15.0"
